# API_to_S3

./: .gitignore  README.md  create_graph_data.py  data.json  es_query.py  es_upload.py  main.py  pyproject.toml  vader.py
src/utils/: apihandler.py  boto.py  constants.py  scraper.py  transform.py  urls.py
src/utils/linkedin_auth/: creds.py
src/utils/transform/: flattener.py  json_to_csv.py  list_to_csv.py
src/utils/twitter_auth/: creds.py
src/wrappers/twitter/: call_api.py
