[tool.poetry]
name = "api_to_s3"
version = "0.1.0"
description = ""
authors = ["ryanjclark <ryanclark2021@u.northwestern.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pandas = "^1.0.5"
boto3 = "^1.14.16"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^5.4.3"
dev-env = "^0.6.10"
csvkit = "^1.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
