[tool.poetry]
name = "api_to_s3"
version = "0.1.0"
description = ""
authors = ["ryanjclark <ryanclark2021@u.northwestern.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pandas = "^1.0.5"
boto3 = "^1.14.16"
beautifulsoup4 = "^4.9.1"
jupyter = "^1.0.0"
ipykernel = "^5.3.3"
elasticsearch = "^7.8.0"
requests-aws4auth = "^1.0"
mypy = "^0.782"
bandit = "^1.6.2"
flake8 = "^3.8.3"
black = "^19.10b0"
vaderSentiment = "^3.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^5.4.3"
dev-env = "^0.6.10"
csvkit = "^1.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
